# glyph-engine

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
beacon_registry/: BEACON_REGISTRY.yaml  CANONICAL_SPEC.md  GOVERNANCE_LOCK.md  RETROFIT_TEMPLATE.md
glyph_engine/: __init__.py  api.py  audit.py  cli.py  engine.py  input.py  proof.py  scroll.py  store.py  token.py  validator.py
tests/: test_engine.py
web/: index.html  styles.css
